# fastapi

./: .gitignore  Dockerfile  main.py  pyproject.toml  railway.json  requirements.txt  requirements2.txt
