[tool.poetry]
name = "railway-fastapi-template"
version = "0.1.0"
description = "This example starts up a FastAPI server"
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
anyio = "^3.7.0"
async-timeout = "^4.0.2"
certifi = "^2023.5.7"
charset-normalizer = "^3.1.0"
click = "^8.1.3"
exceptiongroup = "^1.1.1"
h11 = "^0.14.0"
idna = "^3.4"
mysql-connector = "^2.2.9"
mysql-connector-python = "^8.0.33"
protobuf = ">=3.11.0, <=3.20.3"
pydantic = "^1.10.9"
starlette = "0.19.1"
python-dotenv = "^1.0.0"
redis = "^4.5.5"
requests = "^2.31.0"
six = "^1.16.0"
sniffio = "^1.3.0"
spotipy = "^2.23.0"
typing-extensions = "^4.6.3"
urllib3 = "^2.0.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
